# Civil-Liberties-and-Censorship-Analysis-with-Bruin

./: .gitignore  README.md  analysts-questions-playbook.md  civil_liberties_dev.db  data-modelling.md  pyproject.toml
Bruin/: .gitignore  :memory:  pipeline.yml  requirements.txt
Bruin/assets/ingest/: google_transparency_detailed.py  google_transparency_raw.py  google_transparency_requests.py  lumen_raw.py  ooni_raw.py  raw_acled_aggregated.py
Bruin/assets/reporting/: censorship_vs_requests.sql  civil_liberties_mart.sql  conflict_vs_takedowns.sql  narrative_summary.sql  top_platforms_requests.sql
Bruin/assets/staging/: stg_acled.sql  stg_google_transparency.sql  stg_lumen.sql  stg_ooni.sql
Bruin/infra/: variables.tf
data/dev/acled/: acled_conflict_events.parquet
data/dev/google/: google-government-removal-requests.csv  google_transparency_detailed.parquet  google_transparency_requests.parquet
data/dev/lumen/: lumen_requests.parquet
docs/: data-modelling.md  erd-lineage.md
duckdb/: .gitignore  DashboardWireframe.md  civil-liberties-reporting-playbook-Kenya.md  pipeline.yml
duckdb/assets/ingest/: acled_aggregated_raw.py  google_transparency_raw.py  lumen_raw.py  ooni_raw.py  takedowns_raw.py
duckdb/assets/reporting/: civil_liberties_mart.py
infra/: .gitignore  main.tf  setup-gcp.sh  terraform.tfvars
streamlit/: app.py  requirements.txt  utils.py
streamlit/pages/: 1_Kenya_Profile.py  3_Reasons_for_Takedowns.py  4_Conflict_vs_Censorship.py  5_Fatalities_Risks.py  6_Global_Leaders_Losers.py  7_Kenya_Heatmap.py  9_Kenya_Global_Overview.py
(+31 files in other folders)
