[project]
name = "Civil-Liberties-and-Censorship-Analysis-with-Bruin"
version = "0.1.0"
description = "Civil liberties and Analysis with Bruin in Kenya end-to-end batch data pipeline"
readme = "README.md"
requires-python = ">=3.12.3"

dependencies = [
    "requests>=2.31.0,<3.0",
    "google-cloud-bigquery>=3.13.0,<4.0",
    "google-cloud-bigquery-storage>=2.24.0,<3.0",
    "google-cloud-storage>=2.10.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0",
    "isort>=5.13.0,<6.0",
    "mypy>=1.8.0,<2.0",
]
test = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<5.0",
    "pytest-mock>=3.12.0,<4.0",
    "PyYAML>=6.0.0,<7.0",
]
streamlit = [
    "streamlit>=1.44.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "plotly>=6.0.0,<7.0",
    "db-dtypes>=1.4.0,<2.0",
    "pyarrow>=19.0.0,<20.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
